--- a/mision1.html
+++ b/mision1.html
@@ -30,7 +30,7 @@
     <meta property="og:url" content="index.html">
   </head>
   <nav>
-    <a href="pagina.html" target="_blank">Menú</a>
+    <a href="index.html" target="_blank">Menú</a>
     <a href="mision1.html" target="_blank">Misión y Visión</a>
     <a href="https://chat.whatsapp.com/IxLFzabDSKH1dmeyXUZdFy" target="_blank">Hacer tu pedido Ya</a>
     <a href="https://edwin2032.github.io/hisotoria/" target="_blank">Historia y postres</a>
